--- a/design/header.html
+++ b/design/header.html
@@ -5,8 +5,9 @@
     </div>
     <nav>
         <a href="http://localhost/atelier_web_lu_aprem/projet/projet-minecraft-wiki/">Home</a>
-        <a class="no" href="">Wiki</a>
-        <a class="no" href="">Build</a>
-        <a class="no" href="">Forum</a>
+        <a class="no" href="./wiki.php">Wiki</a>
+        <a class="no" href="./build.php">Build</a>
+        <a class="no" href="./forum.php">Forum</a>
+        <a class="no" href="./creation.php"><img src="img/assets/profil.png" width="41px"></a>
     </nav>
 </header>
