ajout page compte

--- a/design/header.html
+++ b/design/header.html
@@ -8,6 +8,6 @@
         <a class="no" href="./wiki.php">Wiki</a>
         <a class="no" href="./build.php">Build</a>
         <a class="no" href="./forum.php">Forum</a>
-        <a class="no" href="./creation.php"><img src="img/assets/profil.png" width="41px"></a>
+        <a class="no" href="./compte.php"><img src="img/assets/profil.png" width="41px"></a>
     </nav>
 </header>
